# excavator_simulator_mujoco

./: '  .gitignore  CMakeLists.txt  README.md  build.bash
.github/: CODEOWNERS
cmake/: FindOrFetch.cmake
excavator_simulator/: CMakeLists.txt  main.cc
model/excavator/: README.md  excavator.xml
model/excavator/script/: model_generation.py  pose_calculation.py
model/excavator/template/: excavator.xml
plugin/soil/: .gitignore  CMakeLists.txt  README.md  register.cc  register.cpp  soil.cc  soil.cpp  soil.h  soil.hpp
